# model-release-platform

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mypy.ini  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  e2e.yml  pr-title.yml  release-please.yml
mlflow_server/: Dockerfile  start.sh
project/: Dockerfile  pyproject.toml
project/src/: evaluate.py  featurize.py  ingest.py  orchestrate.py  promote.py  register.py  rollback.py  train.py
project/src/common/: config.py  constants.py  dataset_fingerprint.py  mlflow_utils.py
project/src/contracts/: __init__.py  dataset_fingerprint.py  feature_stats.py  model_ref.py
project/src/policy/: __init__.py  release_policy.py
project/tests/: conftest.py  test_config.py  test_release_policy.py
scripts/: check_forbidden_tracked.sh  precommit_block_forbidden_tracked_paths.sh
serving/: Dockerfile  __init__.py  app.py  constants.py  metrics.py  router.py  settings.py  smoke_test.py
serving/tests/: test_api_contract.py  test_metrics.py  test_readiness.py
src/ml_lifecycle_platform/serving/: constants.py  router.py  settings.py  smoke_test.py
src/ml_lifecycle_platform/serving/tests/: conftest.py  test_metrics.py  test_router.py
