[project]
name = "mlflow-e2e-pipeline"
version = "0.1.0"
description = "End-to-end MLflow pipeline (ingest -> featurize -> train -> evaluate -> register) with promotion & serving"
requires-python = ">=3.11"
dependencies = [
  "mlflow>=2.13,<3.0",
  "boto3>=1.28",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "joblib>=1.3",
  "pydantic>=2.6",
  "requests>=2.31"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
