[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.11.7"
dependencies = [
    "boto3>=1.42.34",
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=2.13,<3.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "types-requests>=2.32.4.20260107",
]
